2001-03-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-prepare-display): Setup MIME
	entity even if `gnus-show-mime' is nil.

2001-03-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el: Load gnus-clfns.el after `load-path' is
	adjusted.

	* lisp/gnus-clfns.el (string): New compiler macro.
	(string): Defun-maybe as an ordinary function since it won't be
	provided in cl.
	* lisp/gnus-score.el (gnus-score-find-bnews): Use it as Gnus does.

2001-03-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-retrieve-url): Check if
	`url-current-mime-charset' is bound.

2001-03-04  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-info-find-node): Pretend to be
	`gnus-article-mode' in the article buffer.

2001-03-02  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-kinsoku-eol-list): Simplified.
	(nnshimbun-kinsoku-bol-list): Ditto.

2001-03-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 09.

	* lisp/gnus-offline.el (gnus-offline-get-menu-items): Rewrite using
	`dolist'.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): Simplified.

	* lisp/dgnushack.el: Load cl-macs to ensure that the macro `dolist'
	is defined properly.

2001-02-28  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnwfm.el: Require `gnus-clfns' when compiling.
	* lisp/nnshimbun.el: Ditto.
	* lisp/nnfolder.el: Ditto.
	* lisp/mm-util.el: Ditto.
	* lisp/gnus-vers.el: Ditto.
	* lisp/gnus-sum.el: Ditto.
	* lisp/gnus-score.el: Ditto.
	* lisp/gnus-nocem.el: Ditto.

	* lisp/gnus-ofsetup.el: Don't require `gnus-clfns'.
	(gnus-ofsetup-customize-done): Use `dolist' instead of `mapc'.
	(gnus-setup-for-offline): Ditto.

	* lisp/gnus-offline.el: Don't use `mapc' for binding some vars;
	don't require `gnus-clfns'.

	* lisp/gnus-clfns.el (subseq, merge, coerce, butlast): New compiler
	macros.
	(mapc): Remove.

	* lisp/gnus-art.el: Use `dolist' instead of `mapcar' for defining